--- a/mart-manage-vue3/package.json
+++ b/mart-manage-vue3/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "babel-plugin-import": "^1.13.6",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "moment": "^2.29.4",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
