--- a/mart-manage-vue3/package.json
+++ b/mart-manage-vue3/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "ant-design-vue": "2.2.8",
     "axios": "^1.4.0",
